Added more comments for clarity

--- a/graphs/01 - Check if G is a DAG.ipynb
+++ b/graphs/01 - Check if G is a DAG.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "5f050742",
+   "id": "13ec9997",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7349ee59",
+   "id": "25f2a796",
    "metadata": {},
    "source": [
     "# Check if adjacency matrix $A$ represents a DAG\n",
@@ -51,6 +51,12 @@
     "\n",
     "$$\\Large \\forall \\lambda_{A + I}, \\lambda_{A + I} \\in \\mathbb{R} \\land \\lambda_{A + I} > 0$$\n",
     "\n",
+    "where:\n",
+    "\n",
+    "* $a_{ij}$ is the $ij^{th}$ entry in the adjacency marrix $A$ of a graph $G$\n",
+    "* $I$ is the identity matrix of size $d_A \\times d_A$\n",
+    "* $\\lambda_{A+I}$ are the eigenvalues of matrix $A+I$\n",
+    "\n",
     "_______________________\n",
     "\n",
     "<br>\n",
@@ -71,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "f952ab5e",
+   "id": "e663ee77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4327304",
+   "id": "be0330a6",
    "metadata": {},
    "source": [
     "## DAG"
@@ -110,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "0a9491ce",
+   "id": "495b9521",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "05ee0a67",
+   "id": "e015df1a",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "f13f9c0b",
+   "id": "9668d5da",
    "metadata": {
     "scrolled": true
    },
@@ -189,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "0214d66d",
+   "id": "22f695c0",
    "metadata": {},
    "outputs": [
     {
@@ -204,14 +210,14 @@
     }
    ],
    "source": [
-    "# Check if G is a DAG\n",
+    "# Check if G is a DAG - Method 1\n",
     "check_if_dag_1(G)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "82f83363",
+   "id": "eb264880",
    "metadata": {},
    "outputs": [
     {
@@ -226,12 +232,13 @@
     }
    ],
    "source": [
+    "# Check if G is a DAG - Method 2\n",
     "check_if_dag_2(G)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2bac5266",
+   "id": "002b760e",
    "metadata": {},
    "source": [
     "## Non-DAG"
@@ -240,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "a05dab90",
+   "id": "9a40ea71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "29c0a812",
+   "id": "1dae9da8",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "f7fe8ed7",
+   "id": "4779c18e",
    "metadata": {
     "scrolled": true
    },
@@ -320,8 +327,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "864b6b1c",
+   "execution_count": 119,
+   "id": "765571a5",
    "metadata": {},
    "outputs": [
     {
@@ -330,20 +337,20 @@
        "False"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Check if G is a DAG\n",
+    "# Check if G is a DAG - Method 1\n",
     "check_if_dag_1(G_non)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "c014d599",
+   "execution_count": 120,
+   "id": "250e6a54",
    "metadata": {},
    "outputs": [
     {
@@ -352,12 +359,13 @@
        "False"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Check if G is a DAG - Method 2\n",
     "check_if_dag_2(G_non)"
    ]
   }
