--- a/graphs/01 - Check if G is a DAG.ipynb
+++ b/graphs/01 - Check if G is a DAG.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "13ec9997",
+   "id": "2e465d55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25f2a796",
+   "id": "b65e734f",
    "metadata": {},
    "source": [
     "# Check if adjacency matrix $A$ represents a DAG\n",
@@ -70,14 +70,15 @@
     "\n",
     "[Zhang et al. - DAGs with NO TEARS: Continuous Optimization for Structure Learning (2018)](https://arxiv.org/pdf/1803.01422.pdf)\n",
     "\n",
-    "[McKay et al. - Acyclic Digraphs and Eigenvalues of (0,1)-Matrices](https://arxiv.org/pdf/math/0310423.pdf)\n",
-    "\n"
+    "[McKay et al. - Acyclic Digraphs and Eigenvalues of (0,1)-Matrices (2004)](https://arxiv.org/pdf/math/0310423.pdf)\n",
+    "\n",
+    "[Peters et al. - Elements of Causal Inference (2017)](https://library.oapen.org/bitstream/id/056a11be-ce3a-44b9-8987-a6c68fce8d9b/11283.pdf)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e663ee77",
+   "id": "5e78c3cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be0330a6",
+   "id": "a47e69df",
    "metadata": {},
    "source": [
     "## DAG"
@@ -116,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "495b9521",
+   "id": "28597277",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "e015df1a",
+   "id": "48289869",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "9668d5da",
+   "id": "e607a7aa",
    "metadata": {
     "scrolled": true
    },
@@ -195,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "22f695c0",
+   "id": "076ac832",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "eb264880",
+   "id": "875fd92c",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "002b760e",
+   "id": "d2220f91",
    "metadata": {},
    "source": [
     "## Non-DAG"
@@ -247,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "9a40ea71",
+   "id": "5e5b88c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "1dae9da8",
+   "id": "624e7e79",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "4779c18e",
+   "id": "d789de57",
    "metadata": {
     "scrolled": true
    },
@@ -328,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "765571a5",
+   "id": "cac4332a",
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "250e6a54",
+   "id": "8e73a76e",
    "metadata": {},
    "outputs": [
     {
