Added missing references

--- a/graphs/01 - Check if G is a DAG.ipynb
+++ b/graphs/01 - Check if G is a DAG.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2e465d55",
+   "id": "ff3a5214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b65e734f",
+   "id": "62367e5a",
    "metadata": {},
    "source": [
     "# Check if adjacency matrix $A$ represents a DAG\n",
@@ -66,19 +66,19 @@
     "\n",
     "## References\n",
     "\n",
-    "[Morales-Alvarez et al. - VICause: Simultaneous Missing Value Imputation and Causal Discovery with Groups (2021)](https://arxiv.org/pdf/2110.08223.pdf) \n",
-    "\n",
-    "[Zhang et al. - DAGs with NO TEARS: Continuous Optimization for Structure Learning (2018)](https://arxiv.org/pdf/1803.01422.pdf)\n",
-    "\n",
     "[McKay et al. - Acyclic Digraphs and Eigenvalues of (0,1)-Matrices (2004)](https://arxiv.org/pdf/math/0310423.pdf)\n",
     "\n",
-    "[Peters et al. - Elements of Causal Inference (2017)](https://library.oapen.org/bitstream/id/056a11be-ce3a-44b9-8987-a6c68fce8d9b/11283.pdf)"
+    "[Morales-Alvarez et al. - VICause: Simultaneous Missing Value Imputation and Causal Discovery with Groups (2021)](https://arxiv.org/pdf/2110.08223.pdf) \n",
+    "\n",
+    "[Peters et al. - Elements of Causal Inference (2017)](https://library.oapen.org/bitstream/id/056a11be-ce3a-44b9-8987-a6c68fce8d9b/11283.pdf)\n",
+    "\n",
+    "[Zhang et al. - DAGs with NO TEARS: Continuous Optimization for Structure Learning (2018)](https://arxiv.org/pdf/1803.01422.pdf)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "5e78c3cc",
+   "id": "86c28b75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a47e69df",
+   "id": "04ddd7a5",
    "metadata": {},
    "source": [
     "## DAG"
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "28597277",
+   "id": "d850c100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "48289869",
+   "id": "55476b42",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "e607a7aa",
+   "id": "523ea11b",
    "metadata": {
     "scrolled": true
    },
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "076ac832",
+   "id": "239a111d",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "875fd92c",
+   "id": "cfe2b0d0",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2220f91",
+   "id": "247c7ebd",
    "metadata": {},
    "source": [
     "## Non-DAG"
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "5e5b88c5",
+   "id": "79c7b276",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "624e7e79",
+   "id": "4806a555",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "d789de57",
+   "id": "003539e7",
    "metadata": {
     "scrolled": true
    },
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "cac4332a",
+   "id": "f07daea1",
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "8e73a76e",
+   "id": "e4892c7c",
    "metadata": {},
    "outputs": [
     {
