Added missing abs() to rho(A) definition

--- a/linear_algebra/01 - Matrix spectrum and spectral radius.ipynb
+++ b/linear_algebra/01 - Matrix spectrum and spectral radius.ipynb
@@ -23,13 +23,13 @@
     "\n",
     "[**Matrix spectrum**](https://en.wikipedia.org/wiki/Spectrum_of_a_matrix) of matrix $A$ is defined as:\n",
     "\n",
-    "$$\\Large \\Lambda(A) = {\\lambda_1, ..., \\lambda_n}$$\n",
+    "$$\\Large \\Lambda(A) = \\{\\lambda_1, ..., \\lambda_n\\}$$\n",
     "\n",
     "In other words, it's a set of all **eigenvalues** of matrix $A$.\n",
     "\n",
     "**Spectral radius** of matrix $A$ is:\n",
     "\n",
-    "$$\\Large \\rho(A) = max(\\Lambda(A))$$"
+    "$$\\Large \\rho(A) = max(|\\Lambda(A)|)$$"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "7a68136e",
    "metadata": {},
    "outputs": [],
@@ -53,20 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "1b3497ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.3700845 , 1.        , 1.        , 1.        ],\n",
-       "       [1.        , 1.45214673, 1.        , 1.        ],\n",
-       "       [1.        , 1.        , 1.67335178, 1.        ],\n",
-       "       [1.        , 1.        , 1.        , 1.97421229]])"
+       "array([[0.67678214, 1.        , 1.        , 1.        ],\n",
+       "       [1.        , 0.76889147, 1.        , 1.        ],\n",
+       "       [1.        , 1.        , 2.02451147, 1.        ],\n",
+       "       [1.        , 1.        , 1.        , 2.19993336]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,17 +85,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "9b001333",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-0.37396762,  0.5477639 ,  0.84805325,  4.44794578])"
+       "array([-0.27974541,  0.29956771,  1.11391166,  4.53638448])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,24 +108,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "id": "c84390c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.447945775181395"
+       "4.536384480444349"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Compute the spectrasl radius of A\n",
-    "np.max(spectr_A)"
+    "np.max(np.abs(spectr_A))"
    ]
   }
  ],
